manifests-mesh/deploy-acmeair-bookingservice.yaml
###### Booking Service ######
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-bookingservice
spec:
  replicas: 1
  selector:
    matchLabels:
      name: acmeair-booking-deployment
  template:
    metadata:
      labels:
        name: acmeair-booking-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
    spec:
      containers:
      - name: acmeair-bookingservice-java
        image: acmeair-bookingservice-java:latest
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 20
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 120
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-booking-service
spec:
  ports:
    - port: 9080
  selector:
    name: acmeair-booking-deployment
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/connection-proxy-header: "keep-alive"
  name: acmeair-booking-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: /booking
        backend:
          service: 
            name: acmeair-booking-service
            port: 
              number: 9080
